--- a/index.html
+++ b/index.html
@@ -196,8 +196,7 @@
             <h2>Contact Us</h2>
             <p>If you have questions about this Privacy Policy or your data:</p>
             <p>
-                <strong>Email:</strong> privacy@octa.app<br>
-                <strong>Website:</strong> https://octa.app
+                <strong>Email:</strong> nickcamacho5335@gmail.com<br>
             </p>
             <p><em>Note: Replace contact information with your actual details before publishing.</em></p>
         </div>
